# tanmatsu-xtulator

./: .gitignore  CMakeLists.txt  Makefile  README.md
components/gui/: CMakeLists.txt  gui_footer.c  gui_menu.c  gui_osk.c  idf_component.yml
components/gui/include/: gui_footer.h  gui_menu.h  gui_osk.h  gui_style.h
main/: CMakeLists.txt  idf_component.yml  main.c
main/common/: display.c
main/xtulator/: machine.c  main.c
main/xtulator/modules/audio/: sdlaudio.c
main/xtulator/modules/input/: sdlkeys.h
main/xtulator/modules/video/: cga.c  sdlconsole.c  sdlconsole.h  vga.c
partition_tables/: 16M.ods
sdkconfigs/: esp32-p4-function-ev-board  general  hackerhotel-2026  konsool  mch2022  tanmatsu
